--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,15 @@
 @import 'variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Codystar&family=Iceland&display=swap');
+
+/* Remove browser scrollbar */
+:root {
+  -ms-overflow-style: none; /*IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
+}
 
 *, *::before, *::after {
     margin: 0;
@@ -12,39 +23,79 @@
 
 body {
     margin-top: 0;
+    font-family: 'Iceland', cursive;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: calc(#{$burger-dimensions} * 2);
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background: linear-gradient(to bottom, white 60%, rgba(255,255,255,0.7) 85%, rgba(255,255,255,0) 100%);
+
+    .contact-links {
+        position: absolute;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        right: 0;
+        color: white;
+        background: rgba(0,0,0,0.8);
+        margin-top: 0;
+        padding: 1rem 1rem 1rem 2.5rem;
+        clip-path: polygon(1.5% 0, 100% 0, 100% 100%, 0% 100%);
+
+        img {
+            margin: auto 0;
+            margin-left: 1rem;
+        }
+    }
 }
 
 .menu-container {
     margin-top: 0;
-    position: fixed;
-    top: 15px;
-    right: 15px;
-    width: 60px;
-    height: 60px;
+    margin-right: 2rem;
+    position: absolute;
+    left: 2rem;
+    width: calc(#{$burger-dimensions} * 1.5);
+    height: calc(#{$burger-dimensions} * 1.5);
 
     .menu {
         position: fixed;
         top: 0;
         bottom: 0;
-        opacity: 0;
-        right: -200px;
-        width: 200px;
+        opacity: 1;
+        left: 0;
+        width: $menu-width;
         margin-top: 0;
         transition: right 400ms ease-out, opacity 0.5s ease;
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        background: rgba(0,0,0,0.9);
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
+        background: rgba(0,0,0,0.85);
+        clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
         z-index: 1;
 
         ul {
             margin-top: 20vh;
             list-style: none;
             font-size: 1.5rem;
-            li {
+            .link {
                 margin-bottom: 1.5rem;
+                cursor: pointer;
+                font-family: 'Codystar', cursive;
+                font-weight: 800;
+                font-size: 1.2rem;
+                text-decoration: none;
                 color: white;
+                &:hover {
+                    color: orange;
+                }
             }
         }
     }
@@ -55,10 +106,11 @@ body {
         left: 0;
         right: 0;
         bottom: 0;
-        background: white;
+        background-color: white;
         margin-top: 0;
         opacity: 0;
         z-index: 0;
+        transition: opacity 600ms ease;
     }
 
     .toggler {
@@ -66,6 +118,7 @@ body {
         width: 100%;
         height: 100%;
         opacity: 0;
+        display: none;
         z-index: 10;
 
         &:checked {
@@ -79,8 +132,8 @@ body {
                 }
 
                 &::before {
-                    background-color: white;
                     top: 0;
+                    background-color: white;
                 }
             }
 
@@ -90,19 +143,19 @@ body {
             }
 
             & ~ .shroud {
-                opacity: 0.4;
+                opacity: 0.8;
             }
         }
     }
     
     .burger-menu {
+        display: none;
         margin-top: 0;
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
-        display: flex;
         justify-content: center;
         align-items: center;
         z-index: 5;
@@ -126,28 +179,34 @@ body {
             &::before {
                 top: -15px;
                 // margin-bottom: 15px;
-                transition: margin-bottom 400ms ease;
+                // transition: margin-bottom 400ms ease;
            }
 
            &::after {
                bottom: -15px;
             //    margin-top: 15px;
-               transition: margin-top 400ms ease;
+            //    transition: margin-top 400ms ease;
            }
         }
     }
 }
 
+.main {
+    margin-top: 0;
+    width: calc(100vw - #{$menu-width} - 2rem);
+    margin-left: calc(#{$menu-width});
+    padding: 0 2rem;
+}
+
 .container {
-    width: 80vw;
-    margin: 0 auto;
+    margin-top: calc((#{$burger-dimensions} * 2) + 2rem);
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     column-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-template-areas: 'T T T T' 'L L R R';
-    border-left: 1px solid black;
-    border-right: 1px solid black;
 }
 
 h2 {
@@ -156,7 +215,8 @@ h2 {
     grid-area: T;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: left;
+    font-size: 4rem;
 }
 
 .container > p {
@@ -172,24 +232,24 @@ h2 {
     grid-area: R;
 }
 
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    width: 90vw;
-    border: 3px dotted red;
+#home {
+    display: grid;
+}
 
-    div {
-        margin-top: 0;
-        border: 1px solid purple;
-        width: 30%;
-        flex-basis: calc((840px - 100%) * 999);
-        flex-grow: 1;
-    }
+#projects {
+    display: none;
+}
+
+#contact {
+    display: none;
 }
 
 @media screen and (max-width: 750px) {
     .menu-container {
+
+        .toggler {
+            display: block;
+        }
     
         .menu {
             top: -100vh;
@@ -210,21 +270,25 @@ h2 {
                 }
             }
         }
-        width: 40px;
-        height: 40px;
+        width: $burger-dimensions;
+        height: $burger-dimensions;
 
-        .burger-menu div {
-            height: 5px;
-        }
+        .burger-menu {
+            display: flex;
 
-        .burger-menu div::before {
-            top: -10px;
-            height: 5px;
-        }
-
-        .burger-menu div::after {
-            bottom: -10px;
-            height: 5px;
+            div {
+                height: 5px;
+                
+                &::before {
+                    top: -10px;
+                    height: 5px;
+                }
+                
+                &::after {
+                    bottom: -10px;
+                    height: 5px;
+                }
+            }
         }
     }
 
