--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,4 @@
 @import 'variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Codystar&family=Montserrat:wght@300&display=swap');
 
 /* Remove browser scrollbar */
 :root {
@@ -41,7 +40,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     z-index: 99;
-    background: linear-gradient(to bottom, white 60%, rgba(255,255,255,0.7) 85%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(to bottom, white 45%, rgba(255,255,255,0.7) 85%, rgba(255,255,255,0) 100%);
 
     .contact-links {
         position: absolute;
@@ -49,12 +48,10 @@ body {
         justify-content: space-around;
         align-items: center;
         right: 0;
-        min-width: 15vw;
-        min-height: 5vh;
         color: white;
         background: rgba(0,0,0,0.8);
         margin-top: 0;
-        padding: 1rem 1rem 1rem 2.5rem;
+        padding: 0.75rem 1rem 0.75rem 2.5rem;
         clip-path: polygon(1.5% 0, 100% 0, 100% 100%, 0% 100%);
 
         img {
@@ -93,7 +90,13 @@ body {
             margin-top: 20vh;
             list-style: none;
             font-size: 1.5em;
+            transform: rotate(4deg);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+
             .link {
+                transform: rotate(-4deg);
                 margin-bottom: 1.5rem;
                 cursor: pointer;
                 // font-family: 'Codystar', cursive;
@@ -105,11 +108,16 @@ body {
                     color: orange;
                 }
             }
+
+            .active-link {
+                color: pink;
+            }
         }
     }
 
     .shroud {
         position: fixed;
+        display: none;
         top: 0;
         left: 0;
         right: 0;
@@ -151,6 +159,7 @@ body {
             }
 
             & ~ .shroud {
+                display: block;
                 opacity: 0.8;
             }
         }
@@ -210,11 +219,22 @@ body {
     margin-top: calc((#{$burger-dimensions} * 2) + 2rem);
     margin-left: auto;
     margin-right: auto;
-    display: grid;
+    display: flex;
     column-gap: 20px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: 'T T T T' 'L L R R';
+    flex-wrap: wrap;
+
+    h1 {
+        width: 100%;
+        color: pink;
+        text-align: center;
+    }
+
+    & > div {
+        flex-basis: 400px;
+        flex-grow: 1;
+        background: orange;
+        padding: 1rem;
+    }
 }
 
 .projects-container {
@@ -232,30 +252,8 @@ body {
     }
 }
 
-h2 {
-    color: black;
-    grid-area: T;
-    display: flex;
-    justify-content: center;
-    align-items: left;
-    font-size: 4rem;
-}
-
-.container > p {
-    background: orange;
-    padding: 1rem;
-}
-
-#first {
-    grid-area: L;
-}
-
-#second {
-    grid-area: R;
-}
-
 #home {
-    display: block;
+    display: flex;
 }
 
 #projects {
@@ -274,6 +272,7 @@ h2 {
     margin-top: 0;
     padding: 1rem;
     width: 80%;
+    border-radius: 0.5rem;
     opacity: 0;
     transform: translateX(25vw);
     transition: transform 650ms ease-out, opacity 250ms ease-in;
@@ -288,9 +287,17 @@ h2 {
         justify-content: space-around;
 
         a {
+            width: 50%;
+            height: 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0,0,0,0.05);
+            border: 2px solid rgba(0,0,0,0.2);
             margin-top: 0;
             color: black;
             text-decoration: none;
+            z-index: 30;
         }
     }
 }
@@ -311,6 +318,10 @@ h2 {
         width: 90vw;
         margin: 0 auto;
         padding: 0;
+
+        .container {
+            margin-top: calc(#{$burger-dimensions} * 2);
+        }
     }
 
     .menu-container {
@@ -320,7 +331,7 @@ h2 {
         }
     
         .menu {
-            top: -100vh;
+            top: -110vh;
             left: 0;
             width: 100vw;
             height: 100vh;
@@ -332,8 +343,12 @@ h2 {
 
             ul {
                 margin-top: 0;
+                transform: rotate(0);
+                .link {
+                    transform: rotate(0);
+                }
                 li {
-                    margin-top: 0;
+                    margin: 0 auto;
                     text-align: center;
                 }
             }
