--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $highlightFont: white;
 $header-color: rgb(59, 65, 71);
+$header-bg-color: rgb(40, 42, 44);
 $primary: #16a085;
 $burger-dimensions: 40px;
 $menu-width: 200px;
