--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,6 +27,13 @@ html, body {
 body {
     margin-top: 0;
     font-family: 'Montserrat', sans-serif;
+
+    h1 {
+        width: 100%;
+        font-size: 2.5em;
+        color: pink;
+        text-align: center;
+    }
 }
 
 .header {
@@ -34,20 +41,22 @@ body {
     top: 0;
     left: 0;
     width: 100vw;
-    height: calc(#{$burger-dimensions} * 2);
+    height: calc(#{$burger-dimensions} * 2.5);
     margin: 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     z-index: 99;
-    background: linear-gradient(to bottom, white 45%, rgba(255,255,255,0.7) 85%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(to bottom, white 45%, rgba(255,255,255,0.7) 80%, rgba(255,255,255,0) 100%);
 
     .contact-links {
         position: absolute;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        top: 1.5rem;
         right: 0;
+        height: 50%;
         color: white;
         background: rgba(0,0,0,0.8);
         margin-top: 0;
@@ -56,7 +65,8 @@ body {
 
         img {
             margin: auto 0;
-            margin-left: 1rem;
+            margin-left: 0.5rem;
+            height: 100%;
         }
     }
 }
@@ -76,7 +86,7 @@ body {
         opacity: 1;
         left: 0;
         width: $menu-width;
-        min-width: 10vw;
+        // min-width: 10vw;
         margin-top: 0;
         transition: right 400ms ease-out, opacity 0.5s ease;
         display: flex;
@@ -195,39 +205,31 @@ body {
             
             &::before {
                 top: -15px;
-                // margin-bottom: 15px;
-                // transition: margin-bottom 400ms ease;
            }
 
            &::after {
                bottom: -15px;
-            //    margin-top: 15px;
-            //    transition: margin-top 400ms ease;
            }
         }
     }
 }
 
 .main {
-    margin-top: 0;
-    width: calc(100vw - #{$menu-width} - 2rem);
+    margin-top: calc((#{$burger-dimensions} * 2) + 2rem);
+    width: calc(100vw - #{$menu-width});
     margin-left: calc(#{$menu-width});
     padding: 0 2rem;
 }
 
 .container {
-    margin-top: calc((#{$burger-dimensions} * 2) + 2rem);
-    margin-left: auto;
-    margin-right: auto;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.home-container {
     display: flex;
     column-gap: 20px;
     flex-wrap: wrap;
-
-    h1 {
-        width: 100%;
-        color: pink;
-        text-align: center;
-    }
 
     & > div {
         flex-basis: 400px;
@@ -241,7 +243,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: calc((#{$burger-dimensions} * 2) + 2rem);
 
     p {
         padding: 1rem;
@@ -275,7 +276,7 @@ body {
 .fader {
     margin-top: 0;
     padding: 1rem;
-    width: 80%;
+    width: 60%;
     border-radius: 0.5rem;
     opacity: 0;
     transform: translateX(25vw);
@@ -324,8 +325,8 @@ body {
         margin: 0 auto;
         padding: 0;
 
-        .container {
-            margin-top: calc(#{$burger-dimensions} * 2);
+        .fader {
+            width: 85%;
         }
     }
 
@@ -382,5 +383,50 @@ body {
 
     .toggler:checked ~ .menu {
         top: 0;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .main .fader {
+        width: 75%;
+    }
+}
+
+@media screen and (min-width: 1900px) {
+
+    body {
+        font-size: 2rem;
+
+        h1 {
+            font-size: 4em;
+        }
+    }
+
+    .header {
+        height: calc(#{$burger-dimensions} * 3.5);
+
+        .contact-links {
+            font-size: 1em;
+        }
+    }
+
+    .menu-container .menu {
+        width: calc(#{$menu-width} * 2);
+
+        ul {
+            font-size: 1.5em;
+        }
+    }
+
+    .main {
+        margin-top: calc((#{$burger-dimensions} * 6));
+        margin-left: calc(#{$menu-width} * 2);
+        width: calc(100vw - (#{$menu-width} * 2));
+    }
+
+    .projects-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
