Changed styling of projects page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$highlightFont: white;
+$highlightFont: rgb(211, 135, 188);
 $header-color: rgb(59, 65, 71);
 $header-bg-color: rgb(40, 42, 44);
 $primary: #16a085;
