--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -34,6 +34,15 @@ body {
         color: $highlightFont;
         text-align: center;
     }
+
+    a {
+        color: white;
+        text-decoration: none;
+
+        &:hover {
+            color: pink;
+        }
+    }
 }
 
 .header {
@@ -235,7 +244,7 @@ body {
     & > div {
         flex-basis: 400px;
         flex-grow: 1;
-        background-color: $highlightFont;
+        background-color: rgba($highlightFont,0.7);
         padding: 1rem;
     }
 }
@@ -276,6 +285,11 @@ body {
 
 .fader {
     margin-top: 0;
+    min-height: 500px;
+    max-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     padding: 1rem 4rem;
     opacity: 0;
     transform: translateX(25vw);
@@ -284,8 +298,36 @@ body {
     color: black;
     clip-path: polygon(3% 0, 100% 0, 97% 100%, 0 100%);
     
-    img {
-        box-shadow: 0 5px 10px 2px rgba(0,0,0,0.35);
+    .image-container {
+        position: relative;
+        width: 100%;
+        min-height: 300px;
+        display: flex;
+        align-items: flex-end;
+
+        img {
+            box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
+        }
+
+        &::before, &::after {
+            position: absolute;
+            content: '';
+            bottom: 5px;
+            width: 45%;
+            height: 20px;
+            box-shadow: 0 0 5px 8px rgba(0,0,0,0.3);
+            z-index: -1;
+        }
+
+        &::before {
+            left: 10px;
+            transform: rotate(-1deg);
+        }
+
+        &::after {
+            right: 10px;
+            transform: rotate(1deg);
+        }
     }
 
     .project-links {
@@ -305,6 +347,11 @@ body {
             color: black;
             text-decoration: none;
             z-index: 30;
+
+            &:hover {
+                background: rgba(0,0,0,0.8);
+                color: pink;
+            }
         }
     }
 }
