--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -284,6 +284,7 @@ body {
 }
 
 .fader {
+    position: relative;
     margin-top: 0;
     height: 40vw;
     max-height: 90vh;
@@ -297,19 +298,47 @@ body {
     transition: transform 650ms ease-out, opacity 250ms ease-in;
     color: black;
     clip-path: polygon(3% 0, 100% 0, 97% 100%, 0 100%);
+
+    // &::before, &::after {
+    //     content: '';
+    //     position: absolute;
+    //     top: 0;
+    //     left: 2px;
+    //     height: 100%;
+    //     width: 10px;
+    //     background: rgba($highlightFont, 0.4);
+    //     transform: rotate(2.5deg);
+    //     z-index: 10;
+    // }
+
+    // &::after {
+    //     left: calc(100% - 12px);
+    // }
+
+    div .description {
+        margin: 0;
+    }
     
     .image-container {
         position: relative;
         flex-basis: 80%;
+        align-self: center;
+        min-width: 100%;
         box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
-        background-size: cover;
-        background-position: center bottom;
+        background-color: rgb(247, 247, 247);
+        background-size: 100% auto;
+        background-position: center top;
         background-repeat: no-repeat;
+        transition: min-width 200ms ease-in;
+
+        &:hover {
+            min-width: 125%;
+        }
 
         &::before, &::after {
             position: absolute;
             content: '';
-            bottom: 4px;
+            bottom: 5px;
             width: 45%;
             height: 20px;
             box-shadow: 0 0 5px 8px rgba(0,0,0,0.3);
@@ -318,12 +347,12 @@ body {
 
         &::before {
             left: 10px;
-            transform: rotate(-0.75deg);
+            transform: rotate(-0.95deg);
         }
 
         &::after {
             right: 10px;
-            transform: rotate(0.75deg);
+            transform: rotate(0.95deg);
         }
     }
 
@@ -340,10 +369,9 @@ body {
             background: rgba(0,0,0,0.05);
             border: 1px solid black;
             padding: 1.5rem 2rem;
-            margin: 0.5rem auto 1rem;
+            margin: 0;
             color: black;
             text-decoration: none;
-            z-index: 30;
 
             &:hover {
                 background: rgba(0,0,0,0.8);
@@ -381,9 +409,9 @@ body {
             padding: 1rem 2rem;
 
             .image-container {
+                background-position: center;
                 &::before, &::after {
-                    bottom: 8px;
-                    width: 40%;
+                    display: none;
                 }
             }
         }
