--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
-$highlightFont: rgb(211, 135, 188);
+$highlightFont: #d387bc;
+$highlightLink: #ffa000;
 $header-color: rgb(59, 65, 71);
 $header-bg-color: rgb(40, 42, 44);
 $primary: #16a085;
