--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -69,8 +69,38 @@ body {
         color: white;
         background: rgba(0,0,0,0.8);
         margin-top: 0;
-        padding: 0.75rem 1rem 0.75rem 2.5rem;
+        padding: 0.5rem 1rem 0.5rem 2.5rem;
         clip-path: polygon(1.5% 0, 100% 0, 100% 100%, 0% 100%);
+
+        span {
+            cursor: pointer;
+            &:hover {
+                color: $highlightLink;
+            }
+        }
+
+        #github-link, #linkedin-link {
+            height: 100%;
+            width: 1.75rem;
+            margin: auto;
+            margin-left: 0.5rem;
+            background-image: url('./assets/github-logo.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+
+            &:hover {
+                background-image: url('./assets/github-logo-hover.png');
+            }
+        }
+
+        #linkedin-link {
+            background-image: url('./assets/linkedin-logo.png');
+
+            &:hover {
+                background-image: url('./assets/linkedin-logo-hover.png');
+            }
+        }
 
         img {
             margin: auto 0;
@@ -288,6 +318,7 @@ body {
     margin-top: 0;
     height: 40vw;
     max-height: 90vh;
+    min-height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -329,7 +360,7 @@ body {
         background-size: 100% auto;
         background-position: center top;
         background-repeat: no-repeat;
-        transition: min-width 200ms ease-in;
+        transition: min-width 400ms ease-in 100ms;
 
         &:hover {
             min-width: 125%;
@@ -338,21 +369,22 @@ body {
         &::before, &::after {
             position: absolute;
             content: '';
-            bottom: 5px;
+            bottom: 7px;
             width: 45%;
             height: 20px;
+            background: rgba(0,0,0,0.3);
             box-shadow: 0 0 5px 8px rgba(0,0,0,0.3);
             z-index: -1;
         }
 
         &::before {
             left: 10px;
-            transform: rotate(-0.95deg);
+            transform: rotate(-1.5deg);
         }
 
         &::after {
             right: 10px;
-            transform: rotate(0.95deg);
+            transform: rotate(1.5deg);
         }
     }
 
@@ -520,5 +552,21 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        .image-container {
+            &::before, &::after {
+                bottom: 10px;
+                width: 75%;
+                // height: 60px;
+            }
+    
+            &::before {
+                transform: rotate(-1deg);
+            }
+    
+            &::after {
+                transform: rotate(1deg);
+            }
+        }
     }
 }
